# shell-ai-ask

./: .gitignore  README.md  __init__.py  config.example.json  config.py  conversation.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py
src/shell_ai_ask/: __main__.py  config.py  conversation.py  i18n.py  main.py  models.py
src/shell_ai_ask/translations/: en.json  zh.json
